--- a/assets/app.css
+++ b/assets/app.css
@@ -89,3 +89,13 @@
 .accordion {
   --bs-accordion-border-width: 0;
 }
+
+/* Allow dropdown menus to escape accordions & cards */
+.Select-menu-outer {
+  position: absolute !important;
+  z-index: 9999 !important;
+}
+
+
+
+
