--- a/assets/app.css
+++ b/assets/app.css
@@ -18,7 +18,7 @@
   border-radius: 12px;
   border: none;
   margin-bottom: 6px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .accordion-button {
