--- a/assets/app.css
+++ b/assets/app.css
@@ -153,12 +153,12 @@
 
 body {
   background-color: #0f1113;
-  color: #d6d6d6;
+  color: #b3b3b3;
 }
 
 /* Headings */
 h1, h2, h3, h4, h5 {
-  color: #d1d1d1;
+  color: #b3b3b3;
 }
 
 /* Muted text */
